# CyberPPT

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.ar.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh-TW.md  SKILL.md  package-lock.json  package.json  pyproject.toml
agents/: openai.yaml
canvas/: cowart-selection.json  cowart-view-state.json
cyberppt/: __init__.py  cli.py  paths.py
docs/: repository-layout.md
images/: page_image_pair_tasks.json  page_image_pair_tasks.md  page_image_pairs.json
references/: dual-image-editable-overlay.md  internal-reporting-style.md  ppt-production.md  quality-assurance.md  source-analysis.md  storyline.md  visual-system.md
scripts/: blueprint_layout_context.py  blueprint_layout_lint.py  body_blueprint_prompt.py  build_component_signature.py  build_content_lock.py  build_rework_report.py  build_visual_qa_gate.py  compare_merged_render.py  compare_render.py  export_ppt_render.ps1  inspect_pptx_objects.py  measure_blueprint.py  merge_verified_pages.py  speaker_notes.py  test_validate_pptx.py  validate_pptx.py  visual_registry_from_source_capture.py
tests/: run_synthetic_legacy_e2e.py  test_analysis_expression_gate.py  test_blueprint_layout_context.py  test_blueprint_layout_lint.py  test_body_blueprint_prompt.py  test_build_visual_qa_gate.py  test_clean_stage.py  test_cli.py  test_codex_responses_text.py  test_container_workspace.py  test_controlled_correction.py  test_drawingml_utils.py  test_dual_image_overlay_alignment.py  test_dual_image_overlay_qa.py  (+65 more)
(+1281 files in other folders)
